--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/CaioLuColaco/border-radius-calculator#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "bootstrap": "^5.2.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "tailwindcss": "^3.1.7"
   }
 }
